Fixed issue #149, where the scroll bar was always white even when in dark mode

--- a/frontend/src/styles/variables.css
+++ b/frontend/src/styles/variables.css
@@ -79,7 +79,9 @@
     --overlay-bg: rgba(0, 0, 0, 0.4);
 }
 
-body.dark-theme {
+
+body.dark-theme,
+html.dark-theme {
     --text-main: #f5f5f5;
     --text-dark: #e0e0e0;
     --text-muted: #b0b0b0;
